# backend/public/swagger.json
@@ -429,7 +429,7 @@
 				}
 			}
 		},
-		"/move": {
+		"/moves": {
 			"get": {
 				"operationId": "GetAllMoves",
 				"responses": {
@@ -452,7 +452,9 @@
 				],
 				"security": [
 					{
-						"jwt": []
+						"jwt": [
+							"game:read"
+						]
 					}
 				],
 				"parameters": []
@@ -476,7 +478,9 @@
 				],
 				"security": [
 					{
-						"jwt": []
+						"jwt": [
+							"game:create"
+						]
 					}
 				],
 				"parameters": [],
@@ -492,7 +496,7 @@
 				}
 			}
 		},
-		"/move/{id}": {
+		"/moves/{id}": {
 			"get": {
 				"operationId": "GetMoveById",
 				"responses": {
@@ -512,7 +516,9 @@
 				],
 				"security": [
 					{
-						"jwt": []
+						"jwt": [
+							"game:read"
+						]
 					}
 				],
 				"parameters": [
@@ -539,7 +545,9 @@
 				],
 				"security": [
 					{
-						"jwt": []
+						"jwt": [
+							"game:delete"
+						]
 					}
 				],
 				"parameters": [
@@ -573,7 +581,9 @@
 				],
 				"security": [
 					{
-						"jwt": []
+						"jwt": [
+							"game:create"
+						]
 					}
 				],
 				"parameters": [
@@ -599,7 +609,7 @@
 				}
 			}
 		},
-		"/game": {
+		"/games": {
 			"get": {
 				"operationId": "GetAllGames",
 				"responses": {
@@ -666,7 +676,7 @@
 				}
 			}
 		},
-		"/game/{id}": {
+		"/games/{id}": {
 			"get": {
 				"operationId": "GetGame",
 				"responses": {
@@ -779,7 +789,7 @@
 				]
 			}
 		},
-		"/game/user/{id}": {
+		"/games/user/{id}": {
 			"get": {
 				"operationId": "GetGameOfUser",
 				"responses": {
